--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.4.0",
     "react-router-dom": "^7.4.0",
     "swiper": "^11.2.6",
